--- a/views/menu.xml
+++ b/views/menu.xml
@@ -14,7 +14,7 @@
     <menuitem name="Reports" id="siswa_ocb11.submenu_report" parent="siswa_ocb11.kesiswaan_menu" sequence="5" />
 
     <menuitem name="Configuration" id="siswa_ocb11.menu_configuration" parent="siswa_ocb11.kesiswaan_menu" 
-        sequence="6" groups="siswa_ocb11.group_admin" />
+        sequence="6" groups="base.group_system" />
     <menuitem name="Dashboard Manager" id="siswa_ocb11.menu_dashboard_manager" parent="siswa_ocb11.menu_configuration" 
         sequence="61" action="siswa_ocb11.rombel_dashboard_manager_view_action" />
 
