--- a/views/res_siswa.xml
+++ b/views/res_siswa.xml
@@ -217,7 +217,7 @@
             <field name="name">root_siswa_ocb11.siswa_form</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="siswa_ocb11.siswa_form"/>
-            <field name="groups_id" eval="[(6, 0, [ref('base.user_root')])]"/>
+            <field name="groups_id" eval="[(6, 0, [ref('base.group_system')])]"/>
             <field name="priority" eval="23"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='rombels']" position="attributes">
