--- a/report/report_master.xml
+++ b/report/report_master.xml
@@ -12,5 +12,18 @@
             <field name="header_line" eval="False"/>
             <field name="header_spacing">3</field>
         </record>
+
+        <record id="format_report_landscape" model="report.paperformat">
+            <field name="name">Format Report Landscape</field>
+            <field name="default" eval="True"/>
+            <field name="format">A4</field>
+            <field name="orientation">Landscape</field>
+            <field name="margin_top">10</field>
+            <field name="margin_bottom">10</field>
+            <field name="margin_left">10</field>
+            <field name="margin_right">10</field>
+            <field name="header_line" eval="False"/>
+            <field name="header_spacing">1</field>
+        </record>
     </data>
 </odoo>
