--- a/views/menu.xml
+++ b/views/menu.xml
@@ -9,7 +9,7 @@
     <!-- <menuitem name="Dashboard" id="siswa_ocb11.menu_rombel_kanban" parent="siswa_ocb11.kesiswaan_menu" action="siswa_ocb11.siswa_dashboard_view_action" sequence="1"/> -->
     <menuitem name="Dashboard" id="siswa_ocb11.menu_rombel_dashboard_kanban" parent="siswa_ocb11.kesiswaan_menu" action="siswa_ocb11.rombel_dashboard_view_action" sequence="1"/>
     <menuitem name="Master" id="siswa_ocb11.submenu_master" parent="siswa_ocb11.kesiswaan_menu" sequence="2" />
-    <menuitem name="Kesiswaan" id="siswa_ocb11.submenu_kesiswaan" parent="siswa_ocb11.kesiswaan_menu" sequence="3" />
+    <!-- <menuitem name="Kesiswaan" id="siswa_ocb11.submenu_kesiswaan" parent="siswa_ocb11.kesiswaan_menu" sequence="3" /> -->
     <menuitem name="Operations" id="siswa_ocb11.submenu_operation" parent="siswa_ocb11.kesiswaan_menu" sequence="4" />
     <menuitem name="Reports" id="siswa_ocb11.submenu_report" parent="siswa_ocb11.kesiswaan_menu" sequence="5" />
 
@@ -28,14 +28,15 @@
     <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.res_siswa_action_window"  sequence="5"/>
 
     <!-- Kesisswaan -->
-    <menuitem name="Siswa Aktif" id="siswa_ocb11.menu_siswa_by_rombel_new" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.rombel_siswa_action_window"  sequence="1"/>
-    <menuitem name="Non Aktif" id="siswa_ocb11.menu_siswa_non_aktif" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_non_aktif_action_window"  sequence="2"/>    
 
     <menuitem name="Pindah Kelas" id="siswa_ocb11.menu_pindah_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_pindah_kelas"  sequence="1"/>
     <menuitem name="Non Aktif" id="siswa_ocb11.menu_nonaktifkan_siswa" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_non_aktif_action"  sequence="3"/>
     
-    <menuitem name="Siswa Per Rombel" id="siswa_ocb11.menu_rekapitulasi_siswa" parent="siswa_ocb11.submenu_report" action="siswa_ocb11.wizard_rekap_siswa_action"  sequence="1"/>
-    <menuitem name="Form Presensi" id="siswa_ocb11.menu_form_presensi" parent="siswa_ocb11.submenu_report" action="siswa_ocb11.wizard_form_presensi_action"  sequence="2"/>
+    <!-- Report -->
+    <menuitem name="Siswa Aktif" id="siswa_ocb11.menu_siswa_by_rombel_new" parent="siswa_ocb11.submenu_report" action="siswa_ocb11.rombel_siswa_action_window"  sequence="1"/>
+    <menuitem name="Non Aktif" id="siswa_ocb11.menu_siswa_non_aktif" parent="siswa_ocb11.submenu_report" action="siswa_ocb11.siswa_non_aktif_action_window"  sequence="2"/>    
+    <menuitem name="Siswa Per Rombel" id="siswa_ocb11.menu_rekapitulasi_siswa" parent="siswa_ocb11.submenu_report" action="siswa_ocb11.wizard_rekap_siswa_action"  sequence="3"/>
+    <menuitem name="Form Presensi" id="siswa_ocb11.menu_form_presensi" parent="siswa_ocb11.submenu_report" action="siswa_ocb11.wizard_form_presensi_action"  sequence="4"/>
     
     
   </data>
