--- a/views/tahunajaran.xml
+++ b/views/tahunajaran.xml
@@ -29,7 +29,7 @@
         <field name="name">tahunajaran.ocb11.form</field>
         <field name="model">siswa_ocb11.tahunajaran</field>
         <field name="arch" type="xml">
-            <form string="Tahun Ajaran" class="o_sale_order">
+            <form duplicate="0" string="Tahun Ajaran" class="o_sale_order"  >
               <sheet>
                   <group>
                     <field name="name" />
