--- a/views/wizard_pindah_kelas.xml
+++ b/views/wizard_pindah_kelas.xml
@@ -5,7 +5,7 @@
             <field name="name">wizard.ocb11.pindah.kelas</field>
             <field name="model">siswa_ocb11.pindah_kelas</field>
             <field name="arch" type="xml">
-                <form string="Rombongan Belajar" class="o_sale_order" create="false">
+                <form duplicate="0" string="Rombongan Belajar" class="o_sale_order" create="false">
                     <sheet>
                         <group>
                             <group>
