--- a/views/res_siswa.xml
+++ b/views/res_siswa.xml
@@ -169,6 +169,10 @@
                 <xpath expr="//form/sheet/notebook" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
+                <xpath expr="//form" position="attributes">
+                    <attribute name="duplicate">0</attribute>
+                </xpath>
+
                 <!-- <xpath expr="//field[@name='type']" position="before">
                     <field name="panggilan" /> 
                     <field name="tahunajaran_id" context="{'active_test':False}" /> 
