--- a/views/wizard_mutasi.xml
+++ b/views/wizard_mutasi.xml
@@ -5,7 +5,7 @@
             <field name="name">wizard.ocb11.mutasi</field>
             <field name="model">siswa_ocb11.mutasi</field>
             <field name="arch" type="xml">
-                <form string="Mutasi" class="o_sale_order" create="false">
+                <form duplicate="0" string="Mutasi" class="o_sale_order" create="false">
                     <sheet>
                         <group>
                             <group>
