--- a/views/wizard_non_aktif.xml
+++ b/views/wizard_non_aktif.xml
@@ -4,7 +4,7 @@
             <field name="name">wizard.ocb11.nonaktifkann.siswa</field>
             <field name="model">siswa_ocb11.non_aktif</field>
             <field name="arch" type="xml">
-                <form string="Non Atifkan Siswa" class="o_sale_order" create="false">
+                <form duplicate="0" string="Non Atifkan Siswa" class="o_sale_order" create="false">
                     <sheet>
                         <group>
                             <group>
