--- a/views/jenjang.xml
+++ b/views/jenjang.xml
@@ -1,4 +1,4 @@
-<odoo>
+<flectra>
   <data>
     <!-- explicit list view definition -->
     
@@ -38,4 +38,4 @@
 
     
   </data>
-</odoo>
+</flectra>
