--- a/views/rombel_dashboard.xml
+++ b/views/rombel_dashboard.xml
@@ -1,4 +1,4 @@
-<odoo>
+<flectra>
     <data>
         <record id="view_rombel_dashboard_kanban_form" model="ir.ui.view">
             <field name="name">rombel.dashboard.ocb11.kanban</field>
@@ -139,4 +139,4 @@
         </record>
 
     </data>
-</odoo>
+</flectra>
