--- a/views/tahunajaran.xml
+++ b/views/tahunajaran.xml
@@ -1,4 +1,4 @@
-<odoo>
+<flectra>
   <data>
     <!-- explicit list view definition -->
     
@@ -41,4 +41,4 @@
 
     
   </data>
-</odoo>
+</flectra>
