--- a/views/menu.xml
+++ b/views/menu.xml
@@ -3,7 +3,7 @@
     
     <!-- Top menu item -->    
     <!-- <menuitem name="Master" id="siswa_ocb11.master_menu"/> -->
-    <menuitem name="Kesiswaan" id="siswa_ocb11.kesiswaan_menu" sequence="1" />
+    <menuitem name="Kesiswaan" id="siswa_ocb11.kesiswaan_menu" sequence="1" web_icon="siswa_ocb11,static/description/icon.png" />
 
     <!-- menu categories -->    
     <!-- <menuitem name="Dashboard" id="siswa_ocb11.menu_rombel_kanban" parent="siswa_ocb11.kesiswaan_menu" action="siswa_ocb11.siswa_dashboard_view_action" sequence="1"/> -->
